# lulu-ui-stub

./: Cargo.toml  flake.nix  todo.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 72xzm53d0qig7n8cy6rfrvmwh7s1x8cz-source  ki2gznbgf0p8xxq9bb01ppjk323ymlja-source  pv11fms46b44vv50nvi3l1ckjdlrm6lf-source  xxis5pwvyw3v6ia0fr5ipzq0fh004nhw-source
.github/workflows/: release.yaml
src/: main.rs  shape.rs  ui.rs
src/lua/: macros.lua  test.lua  ui.lua
test/: bevy.lua  class_lml.lua  list.lua  lulu.conf.lua  main.lua  normal.lua  painter.lua  style.lua  test.lua  ui-title.txt
