[package]
name = "lulu-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
lulu = { path = "../lulu" }
tokio = {version = "1.43.0", features = ["full"]}
mlua = { version = "0.11.4", features = ["luajit", "vendored", "async", "macros", "serde", "send"] }
eframe = { version = "0.27.2", default-features = false, features = ["x11", "glow"] }
crossbeam-channel = "0.5"