[package]
name = "lulu-ui"
version = "0.1.34"
edition = "2024"

[dependencies]
lulu = "0.0.701"
tokio = {version = "1.43.0", features = ["full"]}
mlua = { version = "0.11.4", features = ["luajit", "vendored", "async", "macros", "serde", "send"] }
eframe = { version = "0.27.2", default-features = false, features = ["x11", "glow"] }
crossbeam-channel = "0.5"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
